# crewai_and_agentops_script

./: Dockerfile.dev  README.md  main.py  pyproject.toml  report.md  song.md
.devcontainer/: devcontainer.json
READMEs/log/: 9_23_2024.md  9_24_2024.md  9_25_2024.md  9_26_2024.md
src/smg/: crew.py  crew.py.bk  main.py
video_script/: intro.md
video_script/1/: 10_adding_agent_ops.md  10_wrapping_up.md  11_inspect_agent_ops_dashboard.md  12_ending_the_section.md  1_devcontainer_setup.md  2_begin_building_the_project.md  2_begin_walkthrough.md  2_transition_to_walkthrough.md  3_adding_some_crewai_related_code.md  3_begin_building_the_crew.md  3_begin_walkthrough.md  4_begin_building_the_crew.md  4_installing_crewai.md  4_running_the_crew.md  5_adding_agents_config.md  5_running_the_crew.md  6_adding_agents_config.md  6_adding_tasks_config.md  7_adding_environment_variables.md  7_adding_tasks_config.md  8_adding_agent_ops.md  8_adding_environment_variables.md  9_adding_agent_ops.md  9_working_crew.md  9_wrapping_up.md
video_script/2/: 0_intro_to_part2.md  10_update_crew_py_file.md  11_add_agent_ops.md  12_running_the_customized_crew.md  1_devcontainer_setup.md  1_intro_to_part2.md  2_devcontainer_setup.md  2_install_crewai.md  3_import_openai_key.md  3_install_crewai.md  4_customize_the_crew_config.md  4_import_openai_key.md  4_scaffold_crewai_project.md  5_customize_the_crew_config.md  5_most_confusing_part.md  5_update_crew_py_file.md  6_add_agent_ops.md  6_import_openai_key.md  6_update_crew_py_file.md  7_add_agent_ops.md  7_running_the_customized_crew.md  (+5 more)
(+2 files in other folders)
