[tool.poetry]
name = "smg"
version = "0.1.0"
description = "smg using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.63.1,<1.0.0" }


[tool.poetry.scripts]
smg = "smg.main:run"
run_crew = "smg.main:run"
train = "smg.main:train"
replay = "smg.main:replay"
test = "smg.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
